syntax = "proto3";

package user;

option go_package = "studentgit.kata.academy/romanmalcev89665_gmail.com/go-kata/new-repository/MicroService/user/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUserByEmail(EmailRequest) returns (UserResponse);
  rpc GetUserProfile(GetUserRequest) returns (UserProfileResponse); 
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserProfileResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

// Запросы
message CreateUserRequest {
  string email = 1;
  string password_hash = 2;
}

message EmailRequest {
  string email = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message UpdateUserRequest {
  string user_id = 1;
  string email = 2;
  string password = 3;
}

message DeleteUserRequest {
  string user_id = 1;
}

// Ответы
message UserResponse {
  string id = 1;
  string email = 2;
  string password_hash = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message UserProfileResponse {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message ListUsersResponse {
  repeated UserProfileResponse users = 1;
  int32 total_count = 2;
}